feat: adding login page

--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eu vim de outro dev</title>
+    <title>Vindo de outra branch</title>
   </head>
   <body>
-    <h1>Eu vim de outro dev</h1>
+    <h2>Este arquivo vem da branch: feat/login-page</h2>
   </body>
 </html>
